# oscarpes

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst
docs/api/: database.rst  entry.rst  ingest.rst  ml_features.rst  nomad_export.rst  parsers.rst  postprocess.rst  store.rst  visualize.rst
docs/guide/: database.rst  entry.rst  installation.rst  ml_features.rst  nomad.rst  postprocess.rst  quickstart.rst  visualize.rst
examples/: oscarpes_demo.ipynb  plot_semiinfinite.py  visualization_examples.py
examples/ARPES_K/: Au.pot  Au.pot_new  Au_ARPES.inp  Au_ARPES.out  Au_ARPES.py  Au_ARPES_SPEC.out  in_pot.inp  in_structur.inp
examples/_demo_db/: entry_ids.json  metadata.json
src/oscarpes/: __init__.py  cli.py  database.py  entry.py  ingest.py  ml_features.py  nomad_export.py  parsers.py  postprocess.py  store.py  visualize.py
src/oscarpes/nomad_plugin/: __init__.py  parser.py  schema.py
